feat: add light-rpc docs for LP and broker

--- a/app/protocol/(2-guides)/running-an-rpc-node/page.mdx
+++ b/app/protocol/(2-guides)/running-an-rpc-node/page.mdx
@@ -1,6 +1,6 @@
 ---
 
-title: Running an RPC node
+title: Running Full or Archive node
 
 description: This guide describes how to download and run a Chainflip RPC node.
 
@@ -9,7 +9,7 @@ description: This guide describes how to download and run a Chainflip RPC node.
 
 import {Callout} from "nextra/components";
 
-## Running an RPC node
+## Running a Full or an Archive RPC node
 
 Running an RPC node for Chainflip is a relatively simple process. Our `apt` repository comes with pre-configured `systemd`
 services that can be used to start an RPC node on your server. If you're using Docker or Kubernetes, we have pre-built images available on Docker Hub.
