fix: minor edits

--- a/app/brokers/(2-guides)/running-broker-api/page.mdx
+++ b/app/brokers/(2-guides)/running-broker-api/page.mdx
@@ -8,7 +8,7 @@ description: Running an Broker-API guide.
 
 import { Callout } from "nextra/components";
 
-## Broker API
+## Running Broker API binary
 
 The Broker API is a standalone client that exposes _Broker_ functionality via a JSON API interface. It can be obtained from the same location as the chainflip-node, i.e. you can install it via `apt`, use the provided docker image or compile it yourself from the sources on Github.
 
