--- a/app/lp/(2-guides)/running-lp-api/page.mdx
+++ b/app/lp/(2-guides)/running-lp-api/page.mdx
@@ -1,6 +1,6 @@
 ---
 
-title: How to run LP-API
+title: Running LP-API binary
 
 description: Running an LP-API guide.
 
@@ -9,7 +9,7 @@ description: Running an LP-API guide.
 import { Callout } from "nextra/components";
 
 
-## Running LP API locally
+## Running LP API binary
 
 Before you do anything, you need to generate a valid `signing_key` and [fund](/protocol/funding-state-chain-account) the associated account.
 
