fix: remove outdated callouts

--- a/app/brokers/(3-techincal-docs)/broker-api/page.mdx
+++ b/app/brokers/(3-techincal-docs)/broker-api/page.mdx
@@ -4,15 +4,11 @@ title: Broker API
 description: The Broker API rpc functions
 ---
 
-import { Cards, Callout } from "nextra/components";
+import { Cards } from "nextra/components";
 
 ## Broker-API
 
-Here are the RPCs useful for brokers that are available on Broker-API binary.
-
-<Callout type="info">
-  The following RPCs are available on `chainflip-broker-api` binary
-</Callout>
+Here are the RPCs useful for liquidity providers that are available on the Broker-API binary or the Broker Light-RPC node.
 
 ## Types
 
