--- a/app/lp/(3-techincal-docs)/lp-api/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-api/page.mdx
@@ -6,17 +6,13 @@ description: The LP API bundle allows liquidity providers to put up orders progr
 
 ---
 
-import { Cards, Callout } from 'nextra/components'
+import { Cards } from 'nextra/components'
 
 
 
 ## LP-API
 
-Here are the RPCs useful for liquidity providers that are available on LP-API binary.
-
-<Callout type="info">
-    The following RPCs are available on `chainflip-lp-api` binary
-</Callout>
+Here are the RPCs useful for liquidity providers that are available on the LP-API binary or the LP Light-RPC node.
 
 ## Types
 
