fix: fix docker compose command

--- a/app/lp/(2-guides)/lp-light-rpc-node/page.mdx
+++ b/app/lp/(2-guides)/lp-light-rpc-node/page.mdx
@@ -108,7 +108,7 @@ You should a response showing that `isSyncing` is false, similar to:
 
 * To stop the node:
 ```bash
-docker compose --profile broker down
+docker compose --profile lp down
 ```
 
 ### Interacting with the APIs
