--- a/app/lp/(2-guides)/how-to-provide-liquidity/page.mdx
+++ b/app/lp/(2-guides)/how-to-provide-liquidity/page.mdx
@@ -34,6 +34,8 @@ Users providing liquidity in the Chainflip JIT AMM follow a process similar to a
 
 Liquidity providers need to have an on-chain account for the Chainflip State Chain and refund addresses ready for each asset. To achieve this, they will need to use the [State Chain Flip Gateway](/protocol/funding-state-chain-account#state-chain-flip-gateway) and fund their account with a nominal amount of FLIP. This FLIP is used to pay the minimal gas fees required to place and update orders.
 
+For Active Liquidity providers, you'll need to register your account as an LP. See [How to register as LP](/lp/how-to-register-as-lp) for detailed instructions.
+
 Liquidity Provider accounts can be managed through the `chainflip-cli`, Polkadot.js wallet, or through the Pools web interface.
 
 ## Depositing Assets to a Liquidity Account
