--- a/app/brokers/(2-guides)/broker-light-rpc-node/page.mdx
+++ b/app/brokers/(2-guides)/broker-light-rpc-node/page.mdx
@@ -8,7 +8,7 @@ description: Running Broker Light RPC node guide.
 
 import { Tabs } from 'nextra/components'
 
-## Broker Light RPC node
+## Broker Light RPC node V3
 
 As of version `1.12.0`, to call the Broker RPC endpoints, you must run your own Broker Light RPC node. Operating a Chainflip light-RPC node is straightforward and resource-efficient.
 The Broker light-rpc node is just a normal Chainflip node running in a specialized `--sync light-rpc` mode. Your Broker account key must be injected in the node's keystore to be able to expose the Broker RPC endpoints and submit extrinsics.
