fix: new changes

--- a/app/brokers/(2-guides)/broker-light-rpc-node/page.mdx
+++ b/app/brokers/(2-guides)/broker-light-rpc-node/page.mdx
@@ -18,6 +18,8 @@ This `light-rpc` mode prunes older blocks and permits querying only recent block
 * 4 GB RAM
 * 20 GB SSD
 
+some changes that needs
+
 ## Running the Broker light-rpc node using Docker
 
 ### Setup
