feat: add docs for running light-rpc mode from chainflip-node binary

--- a/app/lp/(2-guides)/lp-light-rpc-node/page.mdx
+++ b/app/lp/(2-guides)/lp-light-rpc-node/page.mdx
@@ -180,5 +180,43 @@ To give you a better idea of the new architecture, here is a visual comparison o
 
 <img src="/light-rpc/new-lp-light-rpc.png" alt="LP Light-RPC node" />
 
+## Running the LP light-rpc node using `chainflip-node` binary
+
+This section is for users who do not want to use Docker compose, and want to directly use `chainflip-node` binary compiled from source code or obtained using `apt`.
+
+The main goal of LP light-rpc mode is to enable LPs to track only latest chain blocks data and in particular be able to make rpc calls that require signed extrinsics such as [`set_limit_order`](/lp/lp-api/requests#lp_set_limit_order), [`lp_update_limit_order`](/lp/lp-api/requests#lp_update_limit_order) etc ...
+
+* The first step is to inject the **LP Signing Key** inside the chainflip node. This can be achieved using this command
+```bash
+/usr/local/bin/chainflip-node key insert \
+        --chain=/etc/chainflip/berghain.chainspec.json \
+        --base-path=/etc/chainflip/chaindata \
+        --suri=0x$$(cat /etc/chainflip-keys/lp/signing_key_file) \
+        --key-type=lqpr \
+        --scheme=sr25519
+```
+NB: please change `/etc/chainflip-keys/lp/signing_key_file` with location of your LP signing key file
+
+* Then run the node in **light-rpc mode**, by simply calling the `chainflip-node` binary with some special command line arguments that makes the node prune blocks minimising disk space.
+This will require about 20GB of disk space.
+
+```bash
+/usr/local/bin/chainflip-node \
+        --base-path=/etc/chainflip/chaindata \
+        --chain=/etc/chainflip/berghain.chainspec.json \
+        --max-runtime-instances=32 \
+        --rpc-cors=all \
+        --rpc-methods=safe \
+        --rpc-external \
+        --sync=light-rpc \
+        --blocks-pruning=128 \
+        --state-pruning=128 \
+        --disable-log-color \
+        --log info,grandpa=error,runtime::grandpa=off,aura=error,babe=error,txpool::api=error
+```
+If you inspect the above command we achieve disk space-saving by a combination of methods:
+* Enabling Chainflip special light-rpc sync mode using: `--sync=light-rpc`
+* Setting the number of blocks data to prune to 128 using: `--blocks-pruning=128`
+* Setting the number of blocks state data to prune to 128 using: `--state-pruning=128`
 
 
