--- a/app/protocol/(1-concepts)/protocol-overview/page.mdx
+++ b/app/protocol/(1-concepts)/protocol-overview/page.mdx
@@ -44,7 +44,7 @@ In practice, the codebase has no such thing as an 'accounting' or 'settlement' l
 
 The assets used for trading are held in the Vaults on chains such as Ethereum, Bitcoin, and so on, with all of the trading and account-keeping occurring on the State Chain. This means that swap execution and [AMM design can be heavily customised ](/protocol/just-in-time-amm-protocol)for the specific use case of cross-chain value transfer.
 
-The protocol's accounting is fully contained in the [**State Chain**](/protocol/protocol-overview#the-state-chain), and includes the [**Chainflip Just In Time (JIT) AMM**](/protocol/just-in-time-amm-protocol)**.** It is based on the Uniswap v3 AMM design, but unlike Uniswap v3, the JIT AMM is not represented as a series of smart contracts on a single blockchain environment. Rather, the JIT AMM is **virtual**. This means that funds are not held directly in on-chain pools using wrapped assets, but instead traded virtually on the State Chain as account balances, and settled using the actual assets held natively in Vaults by the protocol.
+The protocol's accounting is fully contained in the [**State Chain**](/protocol/protocol-overview#the-state-chain), and includes the [**Chainflip Just In Time (JIT) AMM**](/protocol/just-in-time-amm-protocol)**.** It is based on a combination of a orderbook and the Uniswap v3 AMM design, but unlike Uniswap v3, the JIT AMM is not represented as a series of smart contracts on a single blockchain environment. Rather, the JIT AMM is **virtual**. This means that funds are not held directly in on-chain pools using wrapped assets, but instead traded virtually on the State Chain as account balances, and settled using the actual assets held natively in Vaults by the protocol.
 This works in a similar fashion to how centralised cryptocurrency exchanges store all of the deposits in a unified wallet system, with the balances of individual users tracked in separate accounting and trading systems.
 
 ![Overview of the flow of funds](public/concepts/systemdiagram.jpg)
