change to language around amm

--- a/app/protocol/(1-concepts)/governance-and-security/page.mdx
+++ b/app/protocol/(1-concepts)/governance-and-security/page.mdx
@@ -8,7 +8,7 @@ description: A governance process must exist in order to upgrade the network to 
 
 ## Governance Processes
 
-The Chainflip protocol will not be set in stone. A governance process must exist in order to upgrade the network to support new blockchains, new pools, update fees, and adjust rewards as needed. Further, governance processes can be implemented which could significantly reduce the potential impact of unexpected events such as supermajority attacks, ransom attacks, and software exploits.
+A governance process must exist in order to upgrade the network to support new blockchains, new pools, update fees, and adjust rewards as needed. Further, governance processes can be implemented which could significantly reduce the potential impact of unexpected events such as supermajority attacks, ransom attacks, and software exploits.
 
 However, in order to preserve the decentralised nature of the protocol, the following principles must be observed:
 
