--- a/app/protocol/(1-concepts)/governance-and-security/page.mdx
+++ b/app/protocol/(1-concepts)/governance-and-security/page.mdx
@@ -2,7 +2,7 @@
 
 title: Governance & Security
 
-description: A governance process must exist in order to upgrade the network to support new blockchains, new pools, update fees, and adjust rewards as needed.
+description: A governance process must exist in order to upgrade the network to support new blockchains, new pools, and adjust rewards as needed.
 
 ---
 
