--- a/app/lending/page.mdx
+++ b/app/lending/page.mdx
@@ -39,7 +39,7 @@ Users supplying stablecoins or other supported assets to earn yield driven by bo
 All Liquidity Providers in the Chainflip trading system can benefit from profitable liquidation trades in their usual course of business in the cross-chain JIT AMM market.
 
 ### Integrators
-Partners utilising the Chainflip SDK and related tools can offer these in-app lending and borrowing opportunities to their users and collect a share of the fees — enabling a seamless multichain DeFi experience.
+Partners utilising the Chainflip SDK and related tools can offer these in-app lending and borrowing opportunities to their users and collect a share of the fees, enabling a seamless multichain DeFi experience.
 
 ---
 
@@ -48,7 +48,7 @@ Partners utilising the Chainflip SDK and related tools can offer these in-app le
 To begin supplying or borrowing in Chainflip Lending, choose the flow that matches your profile:
 
 <Cards num={2}>
-    <Cards.Card arrow title="Supplying" href="/lending/supply">
+    <Cards.Card arrow title="Supply Assets" href="/lending/supply">
         <ThemedImage
             lightSrc="/assets/passive-liquidity-light.png"
             darkSrc="/assets/passive-liquidity-dark.png"
@@ -58,7 +58,7 @@ To begin supplying or borrowing in Chainflip Lending, choose the flow that match
         />
     </Cards.Card>
 
-    <Cards.Card arrow title="Borrowing" href="/lending/borrow">
+    <Cards.Card arrow title="Borrow Assets" href="/lending/borrow">
         <ThemedImage
             lightSrc="/assets/active-liquidity-light.png"
             darkSrc="/assets/active-liquidity-dark.png"
