--- a/app/lending/page.mdx
+++ b/app/lending/page.mdx
@@ -27,7 +27,7 @@ For more background on the underlying system architecture, see
 ## Who is this for?
 
 ### Borrowers
-Users who want to unlock the underlying value of their crypto assets while maintaining full exposure to the upside of their holdings — without triggering a sale.
+Users who want to unlock the underlying value of their crypto assets while maintaining full exposure to the upside of their holdings, without triggering a sale.
 
 **Example:**
 A user has 1 BTC and takes out a 50,000 USDC loan to invest or cover real-world expenses, while keeping BTC upside exposure throughout the loan.
@@ -36,7 +36,7 @@ A user has 1 BTC and takes out a 50,000 USDC loan to invest or cover real-world 
 Users supplying stablecoins or other supported assets to earn yield driven by borrower demand, protected by overcollateralisation and liquidations executed directly via Chainflip’s native cross-chain DEX.
 
 ### Liquidity Providers
-All Liquidity Providers in the Chainflip trading system can benefit from profitable liquidation trades in their usual course of business in the cross-chain JIT AMM market.
+All Liquidity Providers in the Chainflip trading system can benefit from profitable liquidation trades in their usual course of business in the cross-chain [JIT AMM](https://docs.chainflip.io/protocol/just-in-time-amm-protocol#just-in-time-amm-protocol) market.
 
 ### Integrators
 Partners utilising the Chainflip SDK and related tools can offer these in-app lending and borrowing opportunities to their users and collect a share of the fees, enabling a seamless multichain DeFi experience.
