--- a/app/lending/page.mdx
+++ b/app/lending/page.mdx
@@ -14,13 +14,13 @@ Chainflip Lending extends the existing Chainflip cross-chain infrastructure with
 
 Deposited assets are held in Chainflip Vaults using a 100-of-150 threshold signature scheme. Borrowers can then create loan positions to borrow USDC, USDT, or other supported assets, and withdraw them directly to any wallet.
 
-See the **[Protocol Overview](https://docs.chainflip.io/protocol/protocol-overview)** and the **[Vault System](https://docs.chainflip.io/protocol/vaults/bitcoin-vault-design)** for more details on native custody.
+See the [Protocol Overview](https://docs.chainflip.io/protocol/protocol-overview) and the [Vault System](https://docs.chainflip.io/protocol/vaults/bitcoin-vault-design) for more details on native custody.
 
 The lending market uses a utilisation-curve interest model similar to established DeFi lending protocols such as
-**[Aave](https://aave.com/docs)** and **[Morpho](https://docs.morpho.org/get-started/)**, and leverages Chainflip’s existing cross-chain swapping infrastructure to manage and process liquidations in the event of a default.
+[Aave](https://aave.com/docs) and [Morpho](https://docs.morpho.org/get-started/), and leverages Chainflip’s existing cross-chain swapping infrastructure to manage and process liquidations in the event of a default.
 
 For more background on the underlying system architecture, see
-**[System Overview](https://docs.chainflip.io/protocol/protocol-overview#system-overview)**.
+[System Overview](https://docs.chainflip.io/protocol/protocol-overview#system-overview).
 
 ---
 
